--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -3,5 +3,13 @@
 }
 
 .test__heading-small {
+  composes: heading;
+
   display: flex;
+
+  :global {
+    .fatLetter {
+      color: rgb(0, 0, 0);
+    }
+  }
 }
